# Flappy_bird

./: CMakeLists.txt  Readme.md
src/: Game.cpp  Game.hpp  Pipe.cpp  Pipe.hpp  Player.cpp  Player.hpp  main.cpp
